--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,10 @@
     "require": {
         "php": "^8.2",
         "inertiajs/inertia-laravel": "^2.0",
-        "laravel/fortify": "^1.27",
         "laravel/framework": "^12.0",
+        "laravel/socialite": "^5.23",
         "laravel/tinker": "^2.10.1",
+        "spatie/laravel-permission": "^6.21",
         "tightenco/ziggy": "^2.5"
     },
     "require-dev": {
