--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@inertiajs/vue3": "^2.0.17",
         "lucide-vue-next": "^0.525.0",
         "nprogress": "^0.2.0",
+        "swiper": "^11.2.10",
         "vue": "^3.5.17",
         "ziggy-js": "^2.5.3"
     }
