--- a/package.json
+++ b/package.json
@@ -17,10 +17,17 @@
     },
     "dependencies": {
         "@inertiajs/vue3": "^2.0.17",
+        "filepond": "^4.32.8",
+        "filepond-plugin-file-validate-type": "^1.2.9",
+        "filepond-plugin-image-preview": "^4.6.12",
+        "filepond-plugin-image-resize": "^2.0.10",
+        "filepond-plugin-image-transform": "^3.8.7",
+        "lodash": "^4.17.21",
         "lucide-vue-next": "^0.525.0",
         "nprogress": "^0.2.0",
         "swiper": "^11.2.10",
         "vue": "^3.5.17",
+        "vue-filepond": "^7.0.4",
         "ziggy-js": "^2.5.3"
     }
 }
